# firm-protocol

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  firm-state.json  pyproject.toml
.github/workflows/: ci.yml
docs/: TUTORIAL.md  TUTORIAL_EN.md  architecture.rst  conf.py  firm-rfc-onepager.md  getting-started.rst  index.rst  spec-v0.1.md  tutorial.py
docs/api/: audit.rst  authority.rst  constitution.rst  events.rst  evolution.rst  federation.rst  governance.rst  human.rst  index.rst  ledger.rst  market.rst  memory.rst  meta.rst  plugins.rst  reputation.rst  roles.rst  runtime.rst  serialization.rst  spawn.rst  types.rst
examples/: langchain_security_scan.py  security_firm_demo.py  startup_lifecycle.py
scan-reports/: README.md  REPORT-autogen.md  REPORT-crewai-v4-deep.md  REPORT-crewai.md  REPORT-dmas.md  REPORT-langchain.md  REPORT-openclaw.md  autogen_security_scan.py  crewai_security_scan.py  crewai_v4_deep_scan.py  dmas_security_scan.py  free_deep_scan.py  openclaw_security_scan.py
src/firm/: __init__.py  __main__.py  cli.py  runtime.py
src/firm/api/: __init__.py  app.py
src/firm/bounty/: __init__.py  campaign.py  dedup.py  factory.py  hackerone.py  reward.py  scope.py  triage.py  vulnerability.py
src/firm/bounty/sandbox/: __init__.py
src/firm/bounty/tools/: __init__.py  scanner.py
src/firm/core/: __init__.py  agent.py  audit.py  authority.py  constitution.py  events.py  evolution.py  federation.py  governance.py  human.py  ledger.py  market.py  memory.py  meta.py  plugins.py  prediction.py  reputation.py  roles.py  serialization.py  spawn.py  types.py
src/firm/dashboard/: index.html
src/firm/llm/: __init__.py  agent.py  executor.py  mcp_bridge.py  providers.py  tools.py
src/firm/security_firm/: __init__.py  agents.py  agents_free.py  factory.py  factory_free.py  findings.py  pipeline.py  pipeline_free.py  report.py
src/firm/security_firm/tools/: __init__.py  repo_scanner.py
tests/: conftest.py  test_agent.py  test_audit.py  test_authority.py  test_bounty_campaign.py  test_bounty_cli.py  test_bounty_dedup.py  test_bounty_factory.py  test_bounty_hackerone.py  test_bounty_reward.py  test_bounty_scope.py  test_bounty_tools.py  test_bounty_triage.py  test_bounty_vuln.py  test_cli.py  test_consensus_llm.py  test_constitution.py  test_e2e.py  test_e2e_full_loop.py  test_events.py  test_evolution.py  test_federation.py  test_global_authority.py  test_governance.py  test_governance_llm.py  test_human.py  test_ledger.py  test_llm.py  test_llm_runtime.py  test_market.py  test_memory.py  test_meta.py  test_plugins.py  test_prediction.py  test_prediction_runtime.py  test_property.py  test_reputation.py  test_reputation_llm.py  test_restructurer.py  test_roles.py  (+7 more)
